# SpongeJNI

./: .gitattributes  .gitignore  pom.xml
rust/: .gitignore  Cargo.toml  README.md
rust/src/: commands.rs  extensions.rs  generated_types.rs  jni.rs  lib.rs  listeners.rs  plugin.rs
src/main/java-templates/me.kyleclemens.spongejni/: PomData.java
src/main/java/me/kyleclemens/spongejni/: SpongeJNI.kt  SpongeJNIShim.java  SpongeJNIShim.kt
