[package]
name = "spongejni"
version = "0.1.0"
authors = ["Kyle Clemens <jkc.clemens@gmail.com>"]

[lib]
name = "spongejni"
crate-type = ["dylib"]

[dependencies]
jni-sys = "0.1.0"
classreader = "0.2.0"
Inflector = "0.3.1"
lazy_static = "0.2.1"
clippy = {version = "0.0.83", optional = true}

[features]
default = []

[profile.release]
lto = true
